--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="128dp"
-        android:text="Facil"
+        android:text="Fácil"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Dificil"
+        android:text="Difícil"
         android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
