--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <stroke
         android:width="1px"
-        android:color="@color/yellow"/>
-    <solid android:color="@color/colorPrimary"/>
+        android:color="@color/black"/>
+    <solid android:color="@color/yellow"/>
     <corners android:radius="10dp"/>
 
 </shape>
